--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 *.exe
 *.o
 *.so
-
+*.out
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
@@ -35,3 +35,8 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+#  Temp Files #
+###############
+*.tmp
+
